FLUID-5692: Fixed the issue that using overflow:hidden to stretch the side bar causes clicking on a link in the content makes the anything above it hidden.

--- a/src/documents/css/doc-base.css.styl
+++ b/src/documents/css/doc-base.css.styl
@@ -288,7 +288,7 @@ Delete - does not seem to be used?
 .doc-base-start-mainBody {
     margin: 0;
     position: relative;
-    overflow: hidden;
+    overflow: auto;
 }
 
 /* the article body */
